# DataVolt

./: .coverage  .gitignore  API.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Config.py  Credentials.env  Dockerfile  LICENSE.md  MANIFEST.in  Performance metrics.py  Pipfile  README.MD  README.md  SQL.Scala  UV  UV.yml  __init__.py  build.sbt  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tree.py
Data Generators/: Sparse_Data_Generator.py  __init__.py
DataVolt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Data_Generators/: Data_Gen_Performance.py  Data_Generation_performance.py  Dense_Data_Generator.py  General_Data_Features.py  Sparse_Data_Generator.py  Tokenizing_Text_Data.py  __init__.py  data_generator.py
EDA/: EDA.py  dimensionality.py
ETL/: CSV_ETL.py  DataBase_ETL.py  ETL_pipeline.py  __init__.py
Example/: Basic_Pipeline.py  Basic_Pipeline_Performance.py  Data_pipeline.py  Example_PCA_SVD.py
Examples/: Advanced_Data_Pipeline.py  Basic_Pipeline.py  Data_pipeline.py  Example_EDA.py  Example_PCA_SVD.py
IO/: io_utils.py
Ingestion/: ingestor.py
Loaders/: Loaders_Performance.py  Vector_database.py  __init__.py  csv_loader.py  csv_looader.rs  sql_loader.py  test_csv_loader.py
ML/: ml_module.py
Market_Mind/: Dashboard.py  Report.py  Transformer_model.py  __init__.py  data_ingestion.py  seo_model.py  text_preprocessing.py  vector_database.py  workflow.py
Monitoring/: monitor.py
Nexa_Data_Studio/: app.py  pyproject.toml  stripe_utils.py
Nexa_Data_Studio/Nexa_Backend/Tokenization/: Build_tokenizer.py  Cleanser.py  Entropy_ranker.py  Label_tokens.py  Main_2.py  __init__.py  generate_dataset.py  hf_upload.py  logic.py  run_backend.py
Nexa_Data_Studio/Nexa_Backend/Tokenization/app/: Api.py  Config.py  Core.py  Payment.py  Progress.py  __init__.py
Nexa_Data_Studio/Nexa_Backend/Tokenization/preprocessing/: Clean_text.py  Preprocess_sample.py  Segment_paragraphs.py  __init__.py
Nexa_Data_Studio/Nexa_Backend/Tokenization/pretraining/: Instruction_formatter.py  __init__.py
Nexa_Data_Studio/Nexa_Backend/models/: NexaCFD.pt
Nexa_Data_Studio/Nexa_Backend/src/: Utils.py  engines.py  main.py
Nexa_Data_Studio/tabular/: inference.py
Nexa_Data_Studio/tokenizer/: main_pipeline.py
Nexa_Data_Studio/utils/: io.py  validation.py
Parallel/: parallel_executor.py
Profiling/: profiler.py
Synthetic/: synthetic_generator.py
(+75 files in other folders)
