[package]
name = "rust_loaders"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.35", features = ["csv"] }
rayon = "1.8"
log = "0.4"
sysinfo = "0.29"
thiserror = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
csv = "1.1"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "csv_loader"
path = "src/main.rs"
