[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--cov=DataFlux", "--cov-report=xml"]
testpaths = ["Tests"]

[tool.coverage.report]
output = "coverage.xml"

[tool.coverage.run]
source = ["DataStream"]
