[project]
name = "nexa-data-studio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "bio>=1.8.0",
    "datasets>=3.6.0",
    "gradio>=5.34.2",
    "nltk>=3.9.1",
    "python-dotenv>=1.1.0",
    "stripe>=12.2.0",
    "tokenization>=1.0.7",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
